--- a/CPU/Dugong-XFCE/Dockerfile
+++ b/CPU/Dugong-XFCE/Dockerfile
@@ -1,1 +1,61 @@
+# x11docker/xfce
+# 
+# Run XFCE desktop in docker. 
+# Use x11docker to run image. 
+# Get x11docker from github: 
+#   https://github.com/mviereck/x11docker 
+#
+# Examples: x11docker --desktop dugong/xfce
+#           x11docker dugong/xfce thunar 
 
+FROM debian:stretch
+ENV DEBIAN_FRONTEND noninteractive
+
+RUN apt-get update
+RUN apt-get install -y apt-utils
+RUN apt-get install -y dbus-x11 x11-utils x11-xserver-utils
+RUN apt-get install -y procps psmisc
+
+# OpenGL support
+RUN apt-get install -y mesa-utils mesa-utils-extra libxv1
+
+# Language/locale settings
+ENV LANG=en_US.UTF-8
+RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen
+RUN echo "LANG=en_US.UTF-8" > /etc/default/locale
+RUN apt-get install -y locales
+
+# some utils to have proper menus, mime file types etc.
+RUN apt-get install -y --no-install-recommends xdg-utils xdg-user-dirs
+RUN apt-get install -y menu menu-xdg mime-support desktop-file-utils desktop-base
+
+# Xfce
+RUN apt-get install -y --no-install-recommends xfce4 
+RUN apt-get install -y xfce4-terminal mousepad xfce4-notifyd 
+
+# includes GTK3 broadway support for HTML5 web applications
+RUN apt-get install -y --no-install-recommends libgtk-3-bin
+
+# additional Xfce panel plugins
+RUN apt-get install -y --no-install-recommends xfce4-battery-plugin \
+    xfce4-clipman-plugin xfce4-cpugraph-plugin xfce4-datetime-plugin \
+    xfce4-netload-plugin xfce4-notes-plugin xfce4-places-plugin \
+    xfce4-sensors-plugin xfce4-systemload-plugin \
+    xfce4-whiskermenu-plugin xfce4-indicator-plugin \
+    xfce4-cpufreq-plugin xfce4-diskperf-plugin xfce4-fsguard-plugin \
+    xfce4-genmon-plugin xfce4-smartbookmark-plugin xfce4-timer-plugin \
+    xfce4-verve-plugin xfce4-weather-plugin
+# additional Xfce goodies
+RUN apt-get install -y xfce4-taskmanager gtk3-engines-xfce
+
+# clean up
+RUN rm -rf /var/lib/apt/lists/*
+
+# create startscript 
+RUN echo '#! /bin/bash\n\
+[ -e "$HOME/.config" ] || cp -R /etc/skel/. $HOME/ \n\
+exec startxfce4\n\
+' > /usr/local/bin/start 
+RUN chmod +x /usr/local/bin/start 
+
+CMD start
