--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -5,8 +5,10 @@ MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
 ENV DEBIAN_FRONTEND noninteractive
 ENV SHELL /bin/bash
 
-RUN apt-get update && apt-get install -y --allow-unauthenticated git curl wget vim bzip2 sudo build-essential pwgen \
-    fuse automake cmake sed grep dpkg zip openjdk-8-jre pkg-config ca-certificates mercurial subversion \
+RUN apt-get update && apt-get install -y --allow-unauthenticated git curl wget vim sudo build-essential pwgen \
+    fuse automake cmake sed grep dpkg openjdk-8-jre pkg-config ca-certificates mercurial subversion finger \
+    p7zip-rar p7zip-full unace unrar zip unzip bzip2 sharutils rar uudeview mpack arj cabextract file-roller \
+    dconf-cli dconf-editor 
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && wget --quiet  https://github.com/krallin/tini/releases/download/v0.16.1/tini \
     && mv tini /usr/local/bin/tini && chmod +x /usr/local/bin/tini
