--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -34,7 +34,7 @@ RUN export PASS="$(pwgen -1 12)" \
     && mkdir -p $HOME/.ve \
     && mkdir -p $HOME/.workspace \
     && ln -s $HOME/.ve $HOME/data/.ve && ln -s $HOME/.workspace $HOME/data/.workspace \
-    && echo "############### Welcome to Minimal Dugong ###############"  >> $HOME/.login \
+    && echo "############### Welcome to Minimal Dugong ###############"  > $HOME/.login \
     && echo "############## User: $USER - Pass: $PASS ##############" >> $HOME/.login \
     && chown -R $USER:$USER $HOME
 
