--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
 ENV DEBIAN_FRONTEND noninteractive
 ENV SHELL /bin/bash
 
-RUN sudo apt-get install linuxmint-keyring \
+RUN apt-get install linuxmint-keyring \
     && echo "deb http://packages.linuxmint.com/ sylvia main" >> /etc/apt/sources.list.d/mint.list \
     && apt-get update && apt-get install -y --allow-unauthenticated git curl wget vim sudo build-essential pwgen \
     fuse automake cmake sed grep dpkg openjdk-8-jre pkg-config ca-certificates mercurial subversion finger \
