--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get install linuxmint-keyring \
     && echo "deb http://packages.linuxmint.com/ sylvia main" >> /etc/apt/sources.list.d/mint.list \
     && apt-get update && apt-get install -y --allow-unauthenticated git curl wget vim sudo build-essential pwgen \
     fuse automake cmake sed grep dpkg openjdk-8-jre pkg-config ca-certificates mercurial subversion finger \
-    p7zip-rar p7zip-full unace unrar zip unzip bzip2 sharutils rar uudeview mpack arj cabextract file-roller \
+    p7zip-rar p7zip-full unace unrar zip unzip bzip2 sharutils rar uudeview mpack arj   \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && wget --quiet  https://github.com/krallin/tini/releases/download/v0.16.1/tini \
     && mv tini /usr/local/bin/tini && chmod +x /usr/local/bin/tini
