--- a/Docker/Cinnamon/Dockerfile
+++ b/Docker/Cinnamon/Dockerfile
@@ -24,7 +24,7 @@
 #
 # See x11docker --help for further options.
 
-FROM dugong:daas:base
+FROM dugong/daas:base
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && apt-mark hold iptables \
