--- a/Docker/XFCE4/Dockerfile
+++ b/Docker/XFCE4/Dockerfile
@@ -1,1 +1,54 @@
+##################################################################################################
+# dugong/cinnamon
+# 
+# Run cinnamon desktop in docker. 
+# Use x11docker to run image. 
+# Get x11docker from github:
+#   https://github.com/mviereck/x11docker 
+#   https://github.com/DugongBioinformatics/x11docker 
+#
+# Run desktop with:
+#   x11docker --desktop --dbus-system dugong/xfce4
+#  or with systemd:
+#   x11docker --desktop --systemd dugong/xfce4
+#
+# Run single application:
+#   x11docker dugong/xfce4 nemo
+#
+#
+# Options:
+# Persistent home folder stored on host with   --home
+# Shared host folder with                      --sharedir DIR
+# Hardware acceleration with option            --gpu
+# Clipboard sharing with option                --clipboard
+# Sound support with option                    --alsa or --pulseaudio
+#
+# See x11docker --help for further options.
+##################################################################################################
 
+FROM dugong/daas:base
+MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
+
+##################################################################################################
+
+LABEL com.nvidia.volumes.needed="nvidia_driver"
+LABEL com.nvidia.cuda.version="${CUDA_VERSION}"
+
+##################################################################################################
+
+USER root
+
+##################################################################################################
+
+ENV DEBIAN_FRONTEND noninteractive
+ENV VIRTUALGL_VERSION 2.5.2
+ENV PATH /usr/local/nvidia/bin:/opt/VirtualGL/bin:/usr/local/cuda/bin:${PATH}
+ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64:${LD_LIBRARY_PATH}
+ENV CUDA_VERSION 9.1.85
+ENV CUDA_PKG_VERSION 9-1=$CUDA_VERSION-1
+# nvidia-container-runtime
+ENV NVIDIA_VISIBLE_DEVICES all
+ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
+ENV NVIDIA_REQUIRE_CUDA "cuda>=9.1"
+
+##################################################################################################
