--- a/Docker/Cinnamon/Dockerfile
+++ b/Docker/Cinnamon/Dockerfile
@@ -1,6 +1,19 @@
 ##################################################################################################
-# dugong/cinnamon
+# Dugong - Scientific Linux Containers for Bioinformatics
+# ========================================================
+#
+# Current development is led by Fabiano Menegidio.
+#
+# Bioinformatician/Bioinformaticist at the Laboratory of Functional 
+# and Structural Genomics of the Integrated Nucleus of Biotechnology 
+# at the University of Mogi das Cruzes, Brazil.
 # 
+# Contact: fabiano.menegidio@biology.bio.br
+# GitHub: https://github.com/fabianomenegidio
+# GitHub: https://github.com/DugongBioinformatics
+#
+#========================================================
+#
 # Run cinnamon desktop in docker. 
 # Use x11docker to run image. 
 # Get x11docker from github:
