--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -25,7 +25,7 @@ ENV NVIDIA_REQUIRE_CUDA "cuda>=9.1"
 ##################################################################################################
 
 RUN apt-get update \
-    && apt-get install apt-transport-https software-properties-common \
+    && apt-get install -y --allow-unauthenticated apt-transport-https software-properties-common \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ##################################################################################################
